--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -1,5 +1,8 @@
 .navbar {
+    align-items: center;
     background-color: #000;
+    display: flex;
+    justify-content: space-around;
     height: 6rem;
     min-width: 100%;
     position: fixed;
@@ -10,6 +13,7 @@
         display: flex;
         justify-content: space-around;
         min-height: 100%;
+        min-width: 70%;
 
         li a {
             color: #fff;
