--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import '../styles/abstracts/base.scss';
 @import '../styles/components/news-header.scss';
 @import '../styles/components/nav';
+@import '../styles/components/search';
 @import '../styles/abstracts/typography'
