--- a/client/src/styles/components/news-header.scss
+++ b/client/src/styles/components/news-header.scss
@@ -10,7 +10,14 @@
 
     a {
         color: #fff;
+        text-shadow: 0px 0px 3px rgba(0, 0, 0, 1);
+
+        // background: inherit;
         text-decoration: none;
+        // filter: invert(1) grayscale(1);
+        // mix-blend-mode: difference;
+        // background-clip: text;
+        // -webkit-background-clip: text;
     }
 
     &__title {
